Fix# Layout of controls